--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">BUT Génie Chimique, Génie des Procédés</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Une formation d'excellence en ingénierie des procédés</h1>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Une formation d'excellence en Génie des procédés</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">
                                     Le BUT GCGP forme des techniciens supérieurs spécialisés dans la conception et l’optimisation des procédés industriels. 
                                     Cette formation permet d’acquérir des compétences en transformation de la matière et de l’énergie par des méthodes physiques, chimiques et biologiques.
@@ -555,7 +555,7 @@
                         <div class="team-text">
                             <div class="bg-light">
                                 <h5 class="fw-bold mb-0">Fanny BERNE</h5>
-                                <small> technicienne GCGP</small>
+                                <small> Technicienne GCGP</small>
                             </div>
                             <div class="bg-primary">
                                 <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
