--- a/pratica1.html
+++ b/pratica1.html
@@ -250,6 +250,13 @@
                             <option>F</option>
                         </select>
                     </div>
+                    <div class="col-md-6 mb-3">
+                        <label class="form-label">d-)Membrane totalement perméable.</label>
+                        <select class="form-select">
+                            <option>V</option>
+                            <option>F</option>
+                        </select>
+                    </div>
                 </div>
             </form>
             
@@ -327,7 +334,7 @@
                         </th>
                         <th>SP=C<sub>p</sub>/C<sub>0</sub>
                         </th>
-                        <th>
+                        <th>n(%)
                         </th>
                     </tr>
                 </thead>
@@ -417,7 +424,7 @@
                         </th>
                         <th>SP=C<sub>p</sub>/C<sub>0</sub>
                         </th>
-                        <th>
+                        <th>n(%)
                         </th>
                     </tr>
                 </thead>
