--- a/pratica2.html
+++ b/pratica2.html
@@ -531,9 +531,9 @@
     </div>
     
             <p>Au cours de la manip, quand le régime permanent est atteint :</p>
-            <p>Conductivité (en mS/cm) de la soude à CB°=<input type="text" placeholder="Insérer la valeur" > mol/L dans le réservoir :  °= <input type="text" placeholder="Insérer la valeur" ></p>
-            <p>Conductivité (en mS/cm) lors du régime permanent (CB) : p = <input type="text" placeholder="Insérer la valeur" > mol/L dans le réservoir :  °= <input type="text" placeholder="Insérer la valeur" ></p>
-            <p>Conductivité a l’épuisement total de l’acétate en réacteur non alimentée (CB∞ =mol/L ) : ∞ = <input type="text" placeholder="Insérer la valeur" > </p>
+            <p>Conductivité (en mS/cm) de la soude à CB°=<input type="text" placeholder="Insérer la valeur" > mol/L dans le réservoir :  &sigma;°= <input type="text" placeholder="Insérer la valeur" ></p>
+            <p>Conductivité (en mS/cm) lors du régime permanent (CB) : &sigma;<sub>p</sub> = <input type="text" placeholder="Insérer la valeur" > </p>
+            <p>Conductivité a l’épuisement total de l’acétate en réacteur non alimentée (CB∞ =mol/L ) : &sigma;<sub>∞</sub>  = <input type="text" placeholder="Insérer la valeur" > </p>
     
             <p>Durée d’établissement du régime permanent (seconds) : tp=  <input type="text" placeholder="Insérer la valeur" > </p>
             <p> Concentrations recalculées pour tenir compte de la dilution (mol/L) </p>
